--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ crashlytics-build.properties
 # End of https://www.gitignore.io/api/unity
 Ar Boardgames/Library
 ArBoardGames Storyboard/Library
+ArBoardGames Storyboard/Temp
