--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 Ar Boardgames/Library
 ArBoardGames Storyboard/Library
 ArBoardGames Storyboard/Temp
+ArBoardGames Project/New Unity Project/Library
+ArBoardGames Project/New Unity Project/Temp
