--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ ArBoardGames Storyboard/Library
 ArBoardGames Storyboard/Temp
 ArBoardGames Project/New Unity Project/Library
 ArBoardGames Project/New Unity Project/Temp
+ArBoardGames Project/New Unity Project/obj/Debug
