Setup inital scripts

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ HUBBLE-AR-Architecture/Library
 HUBBLE-AR-Architecture/Logs
 HUBBLE-Warehouse-Desktop/Library
 HUBBLE-Warehouse-Desktop/Temp
+HUBBLE-Warehouse-Desktop/obj/Debug
