--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ HUBBLE-AR-Architecture/Logs
 HUBBLE-Warehouse-Desktop/Library
 HUBBLE-Warehouse-Desktop/Temp
 HUBBLE-Warehouse-Desktop/obj/Debug
+HUBBLE-Warehouse-Desktop/Assets/Google Sheets to Unity/Resources/GSTU_Config.asset
+HUBBLE-Warehouse-Desktop/Assets/Google Sheets to Unity/Resources/GSTU_Config.asset
+HUBBLE-Warehouse-Desktop/Assets/streamingassets
+HUBBLE-Warehouse-Desktop/Assets/streamingassets.meta
